--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <title>DataJoy is now closed.</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/stylesheets/style.css?fingerprint=77a48b7496417ca0bf6cc93549f27c2a">
+    <link rel="stylesheet" href="/style.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="alternate" href="https://www.getdatajoy.com/" hreflang="en">
-    <meta itemprop="name" content="DataJoy - Online Python and R">
-    <meta itemprop="description" name="description" content="Easy to use, online data processing with Python and R. No installation, a full scripting environment, lots of examples, version control, and much more.">
-    <meta itemprop="image" name="image" content="https://www.sharelatex.com/favicon.ico">
   </head>
   <body>
     <div class="masthead">
@@ -20,17 +17,22 @@
               <div class="page-header">
                 <h2>DataJoy is shutting down</h2>
               </div>
-              <p>We're sorry to announce that DataJoy will be shutting down on <strong>2nd Jan 2017</strong>. Until then, you can still <a href="/login">log in </a>and work on your projects.</p>
-              <hr>
-              <p>Two years ago we started DataJoy with the aim of making data analysis with Python and R easier to learn, more accessible and collaborative. We're pleased that we've achieved some of these goals, but there are some fundamental reasons why we've decided not to continue DataJoy as a product.</p>
+
+
+              <p>We're sorry to announce that DataJoy shut down on 2nd Jan 2017.</p>
+
+              <hr />
+
+              <p>In 2015 we started DataJoy with the aim of making data analysis with Python and R easier to learn, more accessible and collaborative. We're pleased that we've achieved some of these goals, but there are some fundamental reasons why we've decided not to continue DataJoy as a product.</p>
+
               <p>DataJoy was a new tool in a space where there are a lot of good options, so the bar for success was high. While DataJoy has been useful to many individuals, we haven't seen strong growth in the popularity of DataJoy over the last 2 years. Many teachers have used DataJoy as an easy way to introduce their students to Python and R, but as a small company without external investment, this isn't a business model that we've been able to sustainably build on. Our technical team is also relatively small, with another larger product to support. Finding time for DataJoy was becoming increasingly hard, so we decided it was best to draw a clear line under DataJoy and close it down.</p>
+
               <p>We know there are some people for whom DataJoy is very useful, which makes shutting it down a really hard decision. We certainly haven't taken it lightly, and we're truly personally sorry to be discontinuing DataJoy when it is still used by people. We still believe in the idea and vision, but our situation and timing means that we haven't been able to make DataJoy a success, sorry.</p>
-              <h3>Timeline</h3>
-              <p>As of today, we have removed the option to register new accounts on DataJoy. If you are a teacher planning to use DataJoy next term, you can still invite students to register for an account and they will be allowed to do so.</p>
-              <p>DataJoy will otherwise remain fully operational until Jan 2nd 2017 when we will remove access to the site. Please download your data before this date, as it will no longer be accessible after.</p>
-              <h3>Existing Paid Subscriptions</h3>
-              <p>If you have an existing paid account, you can cancel at any time up to Jan 2nd 2017 in your account subscription settings. On Jan 2nd 2017 we will terminate any remaining paid subscriptions and refund any remaining balances, as well as removing access to your account.</p>
-              <p>James and Henry<br>DataJoy Co-founders</p>
+
+              <p>James and Henry
+              DataJoy Co-founders</p>
+
+              
             </div>
             <div class="row-spaced"></div>
           </div>
