added data we announced it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>DataJoy is now closed.</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="alternate" href="https://www.getdatajoy.com/" hreflang="en">
   </head>
@@ -19,7 +19,7 @@
               </div>
 
 
-              <p>We're sorry to announce that DataJoy shut down on 2nd Jan 2017.</p>
+              <p>We're sorry to announce that DataJoy shut down on 2nd Jan 2017. This was originally announced on August 3rd 2016.</p>
 
               <hr />
 
@@ -29,8 +29,8 @@
 
               <p>We know there are some people for whom DataJoy is very useful, which makes shutting it down a really hard decision. We certainly haven't taken it lightly, and we're truly personally sorry to be discontinuing DataJoy when it is still used by people. We still believe in the idea and vision, but our situation and timing means that we haven't been able to make DataJoy a success, sorry.</p>
 
-              <p>James and Henry
-              DataJoy Co-founders</p>
+              <p>James and Henry</p>
+              <p>DataJoy Co-founders</p>
 
               
             </div>
