added email us link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </div>
 
 
-              <p>We're sorry to announce that DataJoy shut down on 2nd Jan 2017. This was originally announced on August 3rd 2016.</p>
+              <p>We're sorry to announce that DataJoy shut down on 2nd Jan 2017. This was originally announced on August 3rd 2016. If you have any questions please contact <a href="mailto:support@sharelatex.com" target="_top">us here</a></p>
 
               <hr />
 
